# PySWATCal

./: .gitignore  COMPREHENSIVE_REVIEW.md  DEMO_DATA.md  DEVELOPMENT_STATUS.md  Dockerfile.swat  FINAL_PROJECT_SUMMARY.md  FINAL_SUMMARY.md  LICENSE  PHASE_2_COMPLETION.md  PHASE_3_COMPLETE.md  PHASE_3_REMAINING_WORK.md  PROJECT_COMPLETE.md  PROJECT_PROGRESS.md  README.md  STATUS.md  app.py  app_simple.py  demo_ui.py  pyproject.toml  requirements.txt
examples/: demo_test.py
examples/examples_US/obs_txt/basin_05459500/: obs_var_1.txt
examples/swat_demo/swat2012_rev622_demo/: 000010000.pnd  000010000.rte  000010000.sub  000010000.swq  000010000.wgn  000010000.wus  000010001.chm  000010001.gw  000010001.hru  000010001.mgt  000010001.sdr  000010001.sep  000010001.sol  000010002.chm  000010002.gw  000010002.hru  000010002.mgt  000010002.sdr  000010002.sep  000010002.sol  000010003.chm  000010003.gw  000010003.hru  000010003.mgt  000010003.sdr  000010003.sep  000010003.sol  000010004.chm  000010004.gw  000010004.hru  000010004.mgt  000010004.sdr  000010004.sep  000010004.sol  000010005.chm  000010005.gw  000010005.hru  000010005.mgt  000010005.sdr  000010005.sep  (+926 more)
examples/test_work/: Demo_Test.json
pyswatcal/: __init__.py
pyswatcal/calibration/: __init__.py  objective_functions.py  sampling.py
pyswatcal/calibration/algorithms/: __init__.py  dds.py  glue.py  pso.py
pyswatcal/core/: __init__.py  config.py  file_manager.py  parallel_engine.py  project.py  swat_runner.py
pyswatcal/example/: swatParam.txt
pyswatcal/example/exe_SWAT+/: cal_parms.cal  soils.sol
pyswatcal/sensitivity/: __init__.py  morris.py  sobol.py
pyswatcal/ui/: __init__.py
pyswatcal/ui/pages/: __init__.py  calibration.py  home.py  parameters.py  project_setup.py  results.py
pyswatcal/utils/: __init__.py  file_parsers.py  output_parsers.py
tests/: __init__.py  test_algorithms.py  test_objective_functions.py
